--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/react": "^5.1.0",
+    "chart.js": "^4.4.3",
+    "dayjs": "^1.11.11",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "react": "^18",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
