--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alptugidin/react-circular-progress-bar": "^1.1.2",
     "@coreui/react": "^5.1.0",
     "chart.js": "^4.4.3",
     "dayjs": "^1.11.11",
