--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-date-range": "^2.0.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
